--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,23 +44,11 @@
         margin-bottom: 2rem;
       }
 
-      .loader {
-        border: 4px solid rgba(255, 255, 255, 0.1);
-        border-left-color: #2e66ff;
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-        margin: 0 auto 2rem;
-      }
-
-      @keyframes spin {
-        0% {
-          transform: rotate(0deg);
-        }
-        100% {
-          transform: rotate(360deg);
-        }
+      .logo {
+          width: 150px;
+          height: auto;
+          margin-bottom: 2rem;
+          filter: drop-shadow(0 0 10px rgba(46, 102, 255, 0.5));
       }
 
       .footer {
@@ -79,7 +67,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="loader"></div>
+      <img src="../img/logo.png" alt="One Habbo Logo" class="logo">
       <h1>ONE HABBO</h1>
       <p>
         Estamos em manutenção para trazer o melhor conteúdo do Habbo Hotel para
