--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="../img/logo.png" alt="One Habbo Logo" class="logo">
+      <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/logo.png?raw=true" alt="One Habbo Logo" class="logo">
       <h1>ONE HABBO</h1>
       <p>
         Estamos em manutenção para trazer o melhor conteúdo do Habbo Hotel para
