--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,11 +59,100 @@
         padding-top: 1rem;
       }
 
+      /* Radio Player Styles */
+      .radio-player {
+          position: fixed;
+          bottom: 2rem;
+          left: 50%;
+          transform: translateX(-50%);
+          background: rgba(255, 255, 255, 0.1);
+          backdrop-filter: blur(15px);
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          padding: 1rem 2rem;
+          border-radius: 50px;
+          display: flex;
+          align-items: center;
+          gap: 1.5rem;
+          box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+          z-index: 100;
+          width: 90%;
+          max-width: 500px;
+          justify-content: space-between;
+      }
+
+      .dj-avatar {
+          width: 64px;
+          height: 64px;
+          background: rgba(255, 255, 255, 0.1);
+          border-radius: 50%;
+          overflow: hidden;
+          border: 2px solid #2e66ff;
+          position: relative;
+      }
+
+      .dj-avatar img {
+          position: absolute;
+          top: -10px;
+          left: 50%;
+          transform: translateX(-50%);
+      }
+
+      .player-info {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          flex-grow: 1;
+      }
+
+      .program-name {
+          font-weight: bold;
+          color: #fff;
+          font-size: 1rem;
+      }
+
+      .dj-name {
+          font-size: 0.8rem;
+          color: #00d2ff;
+      }
+
+      .controls {
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+      }
+
+      .play-btn {
+          background: linear-gradient(135deg, #2e66ff, #9b51e0);
+          border: none;
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+          color: white;
+          font-size: 1.2rem;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          box-shadow: 0 4px 15px rgba(46, 102, 255, 0.4);
+          transition: transform 0.2s;
+      }
+
+      .play-btn:hover {
+          transform: scale(1.1);
+      }
+
+      .volume-slider {
+          width: 80px;
+          accent-color: #2e66ff;
+      }
+
       a {
         color: #00d2ff;
         text-decoration: none;
       }
+      }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
   <body>
     <div class="container">
@@ -87,5 +176,48 @@
         </p>
       </div>
     </div>
+
+    <!-- Radio Player -->
+    <div class="radio-player">
+        <div class="dj-avatar">
+            <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=RZSISTEMA&direction=3&head_direction=3&gesture=sml&action=wav" alt="Avatar DJ">
+        </div>
+        <div class="player-info">
+            <span class="program-name">One Hits</span>
+            <span class="dj-name">DJ RZSISTEMA</span>
+        </div>
+        <div class="controls">
+            <button class="play-btn" id="playBtn" onclick="toggleRadio()">
+                <i class="fas fa-play"></i>
+            </button>
+            <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="0.5" onchange="setVolume(this.value)">
+        </div>
+        <audio id="radioStream" src="https://stream.zeno.fm/g4n8218991zuv" preload="none"></audio>
+    </div>
+
+    <script>
+        const audio = document.getElementById('radioStream');
+        const playBtn = document.getElementById('playBtn');
+        const icon = playBtn.querySelector('i');
+        let isPlaying = false;
+
+        function toggleRadio() {
+            if (isPlaying) {
+                audio.pause();
+                icon.classList.remove('fa-pause');
+                icon.classList.add('fa-play');
+                isPlaying = false;
+            } else {
+                audio.play().catch(e => console.log('Erro ao reproduzir:', e));
+                icon.classList.remove('fa-play');
+                icon.classList.add('fa-pause');
+                isPlaying = true;
+            }
+        }
+
+        function setVolume(val) {
+            audio.volume = val;
+        }
+    </script>
   </body>
 </html>
