Refatoracao: Correcao do CSS, remocao da Hero e adicao da Navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,15 +26,21 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="hero-content">
-            <h1 class="hero-title">BEM VINDO AO<br>ONE HABBO</h1>
-            <p class="hero-subtitle">Sua melhor fonte de entretenimento e notícias do Habbo Hotel.</p>
-        </div>
-        <div class="hero-logo-container">
-            <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/logo_transparente-removebg-preview.png?raw=true" alt="One Habbo Logo" class="hero-logo">
-        </div>
-    </section>
+    <!-- Custom Navbar (Below Header) -->
+    <nav class="main-navbar">
+        <ul class="nav-links">
+            <li><a href="#" class="nav-link active">Início</a></li>
+            <li><a href="#" class="nav-link">Notícias</a></li>
+            <li><a href="#" class="nav-link">Rádio</a></li>
+            <li><a href="#" class="nav-link">Equipe</a></li>
+            <li><a href="#" class="nav-link">Fórum</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content Stream (Placeholder) -->
+    <main style="padding: 2rem; max-width: 1200px; width: 100%;">
+        <!-- Modules will be added here -->
+    </main>
 
     <!-- Floating Audio Element (Shared) -->
     <audio id="radioStream" src="https://stream.zeno.fm/g4n8218991zuv" preload="none"></audio>
