--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,9 @@
   <body>
     <!-- Fixed Header (Top Player) -->
     <header class="main-header" id="mainHeader">
-        <div class="header-logo">ONE HABBO</div>
+        <div class="header-logo">
+            <img src="https://raw.githubusercontent.com/RZSISTEMA/one-habbo/main/img/logo_transparente-removebg-preview.png" alt="One Habbo" style="height: 50px;">
+        </div>
         <div class="header-player">
              <div class="header-controls">
                 <button onclick="toggleRadio()"><i class="fas fa-play" id="headerPlayIcon"></i></button>
