Refactor: Header fixo (scroll) e secao de nuvens

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,8 +37,12 @@
         </button>
     </header>
 
-    <!-- Hero Section -->
-    <!-- Custom Navbar (Below Header) -->
+    <!-- Cloud Background Section -->
+    <div class="cloud-section">
+        <!-- Background image/clouds will go here -->
+    </div>
+
+    <!-- Custom Navbar (Below Cloud Section) -->
     <nav class="main-navbar">
         <ul class="nav-links">
             <li><a href="#" class="nav-link active">Início</a></li>
