Feat: Adiciona logo grande na secao de nuvens

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,7 +43,8 @@
 
     <!-- Cloud Background Section -->
     <div class="cloud-section">
-        <!-- Background image/clouds will go here -->
+        <span class="cloud-text">☁️ Espaço para Nuvens ☁️</span>
+        <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/logo_transparente-removebg-preview.png?raw=true" alt="One Habbo Logo" class="cloud-logo">
     </div>
 
     <!-- Custom Navbar (Below Cloud Section) -->
