Refactor: Logo maior na nuvem, header limpo e toggle na navbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,15 +30,7 @@
                  </button>
              </div>
         </div>
-
-        <div class="header-right-side" style="display: flex; align-items: center; gap: 15px;">
-             <div class="header-logo">
-                <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/logo_transparente-removebg-preview.png?raw=true" alt="One Habbo" style="height: 50px;">
-            </div>
-            <button class="theme-toggle" onclick="toggleTheme()">
-                <i class="fas fa-moon" id="themeIcon"></i>
-            </button>
-        </div>
+        <!-- Right side removed (Logo and Toggle) -->
     </header>
 
     <!-- Cloud Background Section -->
@@ -56,6 +48,9 @@
             <li><a href="#" class="nav-link">Equipe</a></li>
             <li><a href="#" class="nav-link">Fórum</a></li>
         </ul>
+        <button class="theme-toggle" onclick="toggleTheme()" style="margin-left: 20px;">
+            <i class="fas fa-moon" id="themeIcon"></i>
+        </button>
     </nav>
 
     <!-- Main Content Stream (Placeholder) -->
