Feat: Redesign do botao de tema para lateral fixa com icone personalizado

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,10 +40,12 @@
             <li><a href="#" class="nav-link">Equipe</a></li>
             <li><a href="#" class="nav-link">Fórum</a></li>
         </ul>
-        <button class="theme-toggle" onclick="toggleTheme()">
-             <i class="fas fa-moon" id="themeIcon"></i>
-        </button>
     </nav>
+
+    <!-- Sidebar Theme Toggle -->
+    <div id="fixed-theme-toggle" onclick="toggleTheme()" title="Mudar Tema">
+        <img src="img/theme_icon.png" alt="Mudar Tema">
+    </div>
 
     <!-- Latest News Section -->
     <section id="latest-news" class="news-section">
