Feat: Implementa Footer com Disclaimer e Mover Botao de Tema

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,11 +42,6 @@
         </ul>
     </nav>
 
-    <!-- Sidebar Theme Toggle -->
-    <div id="fixed-theme-toggle" onclick="toggleTheme()" title="Mudar Tema">
-        <img src="img/theme_icon.png" alt="Mudar Tema">
-    </div>
-
     <!-- Latest News Section -->
     <section id="latest-news" class="news-section">
         <h2 class="section-title">Últimas Notícias</h2>
@@ -60,6 +55,20 @@
     <main style="padding: 2rem; max-width: 1200px; width: 100%;">
         <!-- Modules will be added here -->
     </main>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="footer-content">
+            <div class="footer-info">
+                <p>One Habbo não é afiliado, endossado, patrocinado ou especificamente aprovado pela Sulake Oy ou suas afiliadas. One Habbo pode usar as marcas registradas e outras propriedades intelectuais do Habbo conforme permitido pela Política de Fã Sites do Habbo.</p>
+                <p>&copy; 2024 One Habbo. Todos os direitos reservados.</p>
+            </div>
+            <div class="footer-toggle" onclick="toggleTheme()" title="Mudar Tema">
+                 <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/theme_icon.png?raw=true" alt="Mudar Tema">
+                 <span>Mudar Tema</span>
+            </div>
+        </div>
+    </footer>
 
     <!-- Floating Audio Element (Shared) -->
     <audio id="radioStream" src="https://stream.zeno.fm/g4n8218991zuv" preload="none"></audio>
