--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,25 +59,12 @@
     <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-upper">
-            <!-- Column 1: Online Users -->
+            <!-- Column 1: Last Registered Users (Dynamic) -->
             <div class="footer-col users-col">
-                <h4>Usuários online</h4>
-                <div class="user-grid">
-                    <!-- Specific users list provided -->
-                    <div class="user-head" title="OllaIia"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=OllaIia&direction=3&head_direction=3&gesture=sml&size=s" alt="OllaIia"></div>
-                    <div class="user-head" title="Jinx-estelar"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Jinx-estelar&direction=3&head_direction=3&gesture=sml&size=s" alt="Jinx-estelar"></div>
-                    <div class="user-head" title="Jose."><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Jose.&direction=3&head_direction=3&gesture=sml&size=s" alt="Jose."></div>
-                    <div class="user-head" title="Cherry"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Cherry&direction=3&head_direction=3&gesture=sml&size=s" alt="Cherry"></div>
-                    <div class="user-head" title="bunnygirll"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=bunnygirll&direction=3&head_direction=3&gesture=sml&size=s" alt="bunnygirll"></div>
-                    <div class="user-head" title="thamipfr"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=thamipfr&direction=3&head_direction=3&gesture=sml&size=s" alt="thamipfr"></div>
-                    <div class="user-head" title="Vid4"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Vid4&direction=3&head_direction=3&gesture=sml&size=s" alt="Vid4"></div>
-                    <div class="user-head" title="Dramen"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Dramen&direction=3&head_direction=3&gesture=sml&size=s" alt="Dramen"></div>
-                    <div class="user-head" title="Baky"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Baky&direction=3&head_direction=3&gesture=sml&size=s" alt="Baky"></div>
-                    <div class="user-head" title="Flufricy:3"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Flufricy:3&direction=3&head_direction=3&gesture=sml&size=s" alt="Flufricy:3"></div>
-                    <div class="user-head" title="Tvesman"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Tvesman&direction=3&head_direction=3&gesture=sml&size=s" alt="Tvesman"></div>
-                    <div class="user-head" title="SandyPelada"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=SandyPelada&direction=3&head_direction=3&gesture=sml&size=s" alt="SandyPelada"></div>
-                    <div class="user-head" title="SoIitudine"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=SoIitudine&direction=3&head_direction=3&gesture=sml&size=s" alt="SoIitudine"></div>
-                    <div class="user-head" title="Beep"><img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Beep&direction=3&head_direction=3&gesture=sml&size=s" alt="Beep"></div>
+                <h4>Últimos Registrados</h4>
+                <div class="user-grid" id="lastRegisteredGrid">
+                    <!-- Users will be loaded here via JS -->
+                    <div class="loading-users">Carregando...</div>
                 </div>
             </div>
 
@@ -86,7 +73,7 @@
                 <h4>Redes sociais</h4>
                 <div class="social-icons">
                     <a href="#" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="social-btn twitter"><i class="fab fa-twitter"></i></a> <!-- X icon via fa-twitter or x -->
+                    <a href="#" class="social-btn twitter"><i class="fab fa-twitter"></i></a>
                     <a href="#" class="social-btn discord"><i class="fab fa-discord"></i></a>
                     <a href="#" class="social-btn instagram"><i class="fab fa-instagram"></i></a>
                 </div>
@@ -104,22 +91,21 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
-
-            <!-- Column 4: Theme Toggle -->
-            <div class="footer-col theme-col">
-                <h4>Tema</h4>
-                <div class="footer-toggle" onclick="toggleTheme()" title="Mudar Tema">
-                     <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/theme_icon.png?raw=true" alt="Mudar Tema">
-                     <span>Alternar Exibição</span>
-                </div>
-            </div>
         </div>
 
         <div class="footer-lower">
-            <div class="footer-disclaimer">
-                <p>One Habbo não é afiliado, endossado, patrocinado ou especificamente aprovado pela Sulake Oy ou suas afiliadas.</p>
-                <p>One Habbo pode usar as marcas registradas e outras propriedades intelectuais do Habbo conforme permitido pela Política de Fã Sites do Habbo.</p>
-                <p class="copyright">&copy; 2024 One Habbo. Todos os direitos reservados.</p>
+            <div class="footer-content-lower">
+                <div class="footer-disclaimer">
+                    <p>One Habbo não é afiliado, endossado, patrocinado ou especificamente aprovado pela Sulake Oy ou suas afiliadas.</p>
+                    <p>One Habbo pode usar as marcas registradas e outras propriedades intelectuais do Habbo conforme permitido pela Política de Fã Sites do Habbo.</p>
+                    <p class="copyright">&copy; 2024 One Habbo. Todos os direitos reservados.</p>
+                </div>
+                
+                <!-- Theme Toggle Moved Here -->
+                <div class="footer-toggle lower-toggle" onclick="toggleTheme()" title="Mudar Tema">
+                     <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/theme_icon.png?raw=true" alt="Mudar Tema">
+                     <span>Alternar Tema</span>
+                </div>
             </div>
         </div>
     </footer>
