--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,35 +58,36 @@
                 <div class="slider-indicators" id="sliderIndicators"></div>
             </div>
 
-            <!-- 2. Latest News List (Center) -->
-            <div class="portal-latest">
-                <h3 class="portal-title"><i class="fas fa-newspaper"></i> Últimas Notícias</h3>
-                <div class="latest-list" id="latestList">
-                    <!-- List items loaded via JS -->
-                    <div class="loading-news">Carregando...</div>
+            <!-- 2. Sidebar (Right: Latest + Partners) -->
+            <div class="portal-sidebar">
+                <div class="portal-latest">
+                    <h3 class="portal-title"><i class="fas fa-newspaper"></i> Últimas Notícias</h3>
+                    <div class="latest-list" id="latestList">
+                        <!-- List items loaded via JS -->
+                        <div class="loading-news">Carregando...</div>
+                    </div>
                 </div>
-            </div>
 
-            <!-- 3. Partners Widget (Right) -->
-            <div class="portal-partners">
-                <h3 class="portal-title"><i class="fas fa-handshake"></i> Parceiros</h3>
-                <div class="partners-grid" id="partnersGrid">
-                    <!-- Partners loaded via JS -->
-                    <div class="partner-card">
-                        <div class="partner-icon"><i class="fas fa-shield-alt"></i></div>
-                        <span>Polícia RPM</span>
-                    </div>
-                    <div class="partner-card">
-                        <div class="partner-icon"><i class="fas fa-music"></i></div>
-                        <span>Balada Beach</span>
-                    </div>
-                    <div class="partner-card">
-                        <div class="partner-icon"><i class="fas fa-building"></i></div>
-                        <span>Arquitetos</span>
-                    </div>
-                    <div class="partner-card">
-                        <div class="partner-icon"><i class="fas fa-gamepad"></i></div>
-                        <span>Eventos</span>
+                <div class="portal-partners">
+                    <h3 class="portal-title"><i class="fas fa-handshake"></i> Parceiros</h3>
+                    <div class="partners-grid" id="partnersGrid">
+                        <!-- Partners loaded via JS -->
+                        <div class="partner-card">
+                            <div class="partner-icon"><i class="fas fa-shield-alt"></i></div>
+                            <span>Polícia RPM</span>
+                        </div>
+                        <div class="partner-card">
+                            <div class="partner-icon"><i class="fas fa-music"></i></div>
+                            <span>Balada Beach</span>
+                        </div>
+                        <div class="partner-card">
+                            <div class="partner-icon"><i class="fas fa-building"></i></div>
+                            <span>Arquitetos</span>
+                        </div>
+                        <div class="partner-card">
+                            <div class="partner-icon"><i class="fas fa-gamepad"></i></div>
+                            <span>Eventos</span>
+                        </div>
                     </div>
                 </div>
             </div>
