Feat: Implementa Loja de Emblemas (Mock) com Grid Responsivo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,18 @@
         </div>
     </section>
 
+    <!-- Badge Store Section -->
+    <section id="badge-store" class="store-section">
+        <div class="section-header center-header">
+            <h2 class="section-title"><i class="fas fa-shopping-bag"></i> Loja One Habbo</h2>
+            <p class="section-desc">Adquira emblemas exclusivos com seus One Coins!</p>
+        </div>
+        <div class="store-grid" id="badgeGrid">
+            <!-- Badges loaded via JS -->
+            <div class="loading-store">Carregando a loja...</div>
+        </div>
+    </section>
+
     <!-- Main Content Stream (Placeholder) -->
     <main style="padding: 2rem; max-width: 1200px; width: 100%;">
         <!-- Modules will be added here -->
