Ajustes finais Loja: Layout 50/50, rolagem oculta e margem de segurança

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,7 @@
                         <!-- Badges loaded via JS -->
                         <div class="loading-store">Carregando a loja...</div>
                     </div>
+                    <p class="store-login-msg"><i class="fas fa-info-circle"></i> Para comprar precisa estar logado no site.</p>
                 </section>
             </div>
 
